--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -43,11 +43,6 @@
                 <property name="padding">5</property>
               </packing>
             </child>
-            <!-- <child> <object class="GtkBox" id="barcode_box_0"> <property name="visible">True</property> <property name="orientation">horizontal</property> <property name="name">barcode_box</property> <child> <object class="GtkEntry" id="barcode_entry_0">
-            <property name="visible">True</property> <property name="max-length">20</property> <property name="name">barcode_entry_0</property> <signal name="activate" handler="new_barcode_btn_clicked"/> </object> <packing> <property name="padding">5</property>
-            </packing> </child> <child> <object class="GtkSpinButton" id="barcode_num_0"> <property name="visible">True</property> <property name="numeric">True</property> <property name="climb-rate">1</property> <property name="digits">0</property> <property
-            name="snap-to-ticks">True</property> <property name="adjustment">spin_button_adjustment</property> <property name="name">barcode_num_0</property> <signal name="value-changed" handler="spin_button_handler"/> </object> <packing> <property
-            name="padding">5</property> </packing> </child> </object> </child> -->
           </object>
         </child>
         <child>
@@ -390,6 +385,16 @@
                 <property name="label">Print</property>
                 <!-- <property name="halign">GTK_ALIGN_CENTER</property> -->
                 <property name="margin">5</property>
+                <signal name="clicked" handler="print_button_clicked"/>
+              </object>
+            </child>
+            <child>
+              <object class="GtkTextView">
+                <property name="name">ui_hint_view</property>
+                <property name="visible">True</property>
+                <property name="editable">False</property>
+                <property name="valign">GTK_ALIGN_FILL</property>
+                <!-- <property name="vexpand">True</property> -->
               </object>
             </child>
           </object>
