--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -379,6 +379,25 @@
               </object>
             </child>
             <child>
+              <object class="GtkBox">
+                <property name="name">printer_box</property>
+                <property name="visible">True</property>
+                <property name="orientation">GTK_ORIENTATION_VERTICAL</property>
+                <child>
+                  <object class="GtkLabel">
+                    <property name="visible">True</property>
+                    <property name="label">Printers</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkComboBoxText">
+                    <property name="visible">True</property>
+                    <property name="name">printer_combo_box</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
               <object class="GtkButton">
                 <property name="name">print_button</property>
                 <property name="visible">True</property>
