--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -1,10 +1,8 @@
-<!-- Copyright (C) 2019 Elijah Schutz -->
-
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Copyright © 2019 Elijah Schutz -->
 <!-- This Source Code Form is subject to the terms of the Mozilla Public
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
-
-<?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <object class="GtkAdjustment" id="spin_button_adjustment">
     <property name="lower">1</property>
